test/unique/neg/nested-class2.check
nested-class2.scala:16: error: unique value expected
    val d: D @unique = new D
                       ^
one error found
